employee-data.yaml
apiVersion: v2
kind: Service
metadata:
  name: employee-data
  labels:
    app: employee-data
spec:
  ports:
  - port: 9000
    name: http
  selector:
    app: employee-data
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: employee-data-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: employee-data
        version: v1
    spec:
      containers:
      - name: employee-data
        image: dirtydeeds/employee-data:firsttry
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
