employee-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: employee-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employee
spec:
  hosts:
  - "*"
  gateways:
  - employee-gateway
  http:
  - match:
    - uri:
        exact: /data
    - uri:
        exact: /actuator/health
    route:
    - destination:
        host: employee-data
        port:
          number: 9000
